z-index fix

--- a/music_map/app/assets/stylesheets/mainview.scss
+++ b/music_map/app/assets/stylesheets/mainview.scss
@@ -45,6 +45,7 @@ body {
 
   #header-controls {
     position: absolute;
+    z-index: 5;
     top: 15px;
     right: 20px;
   }
